# AURA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
include/: AURA.h
src/: AURA.cpp  CMakeLists.txt
test/: main.cpp
